# funky-renderer

./: Cargo.toml  GLTF_IMPLEMENTATION.md  IMPLEMENTATION_CHECKLIST.md  README.md  ROADMAP.md  VULKAN_INTEGRATION_PLAN.md  build.rs  documentation.md  download_duck.ps1  download_gltf_samples.ps1  generate_gltf_bin.py  output.txt
9c8356bdaefbe80b1a22ae0aaee192db-6bbc71830ffe85fbc5bf8214d73bccf845d304f4/: raymarch.hlsl
Md/: FEATURE_COMPLETE.md  GLTF_GUIDE.md  RENDERER_PLAN.md  TINY_GLADE_SECRETS.md
shaders/: cube.frag  cube.frag.spv  cube.vert  cube.vert.spv  cube_frag.spv  egui.frag  egui.frag.spv  egui.vert  egui.vert.spv  gltf.frag  gltf.frag.spv  gltf.vert  gltf.vert.spv  shadow.frag  shadow.vert  shadow.vert.spv
src/: bevy_main.rs  bevy_plugin.rs  cube.rs  debug_ui.rs  egui_integration.rs  egui_vulkan.rs  gltf_loader.rs  gltf_renderer.rs  lib.rs  main.rs  multithreading.rs  renderer.rs
